--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -6,3 +6,8 @@
 
 <h2>@Model.Name</h2>
 
+<ul>
+    <li>Membership Type: @Model.MembershipType.Name</li>
+    <li class="@(Model.Birthdate.HasValue ? "visible-item":"hidden-item")>Birthdate: @Model.Birthdate</li>
+</ul>  
+
